syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateSubnetRequest {
  SubnetArgs resource = 1;
}

message ReadSubnetRequest {
  string resource_id = 1;
}

message UpdateSubnetRequest {
  string resource_id = 1;
  SubnetArgs resource = 2;
}

message DeleteSubnetRequest {
  string resource_id = 1;
}

message SubnetArgs {
  common.ChildResourceCommonArgs common_parameters = 1;
  string name = 2;
  string cidr_block = 3;
  string virtual_network_id = 4;
  int32 availability_zone = 5;
}

message SubnetResource {
  common.CommonChildResourceParameters common_parameters = 1;
  string name = 2;
  string cidr_block = 3;
  string virtual_network_id = 4;
  int32 availability_zone = 5;
}
